# BerkeleyEnvironmental

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: install_service.sh  setup_influxdb.sh  test_mqtt.py
src/envstation/: __init__.py  config.py  main.py
src/envstation/api/: __init__.py  server.py
src/envstation/ingest/: __init__.py  influx_writer.py  mqtt_subscriber.py  schema.py
src/envstation/integrations/: __init__.py  dashboard.py  mqtt_publisher.py  rachio.py
src/envstation/rules/: __init__.py  air_rules.py  engine.py  fire_weather.py  rain_rules.py  soil_rules.py  wind_rules.py
src/envstation/storage/: __init__.py  client.py  queries.py  retention.py
src/envstation/telemetry/: health.py
systemd/: envstation.service
tests/: conftest.py  test_ingest.py  test_queries.py  test_rachio.py  test_rules.py
